Revert "add pre seeded roles and update UI, tests to roles functionaility, and update read me"
This reverts commit b5c828a0f756a138c23c28a70f5f6eb2bdabb7c9.
